styles/dark-mode.css
/* ... */
.shop-order__achievement-requirement, .shop-order__stock-indicator, .shop-order__disclaimer {
    background: var(--ctp-yellow) !important;
    border-color: var(--ctp-flamingo) !important;
    color: var(--ctp-maroon) !important;
}


.sidequest-show--optimization .sidequest-show__info-title,.sidequest-show--optimization .sidequest-show__help-note{
    color: var(--ctp-red) !important;
}

